# neural-chord-harmonizer

./: DATASET.md  LICENSE  README.md  TECHNICAL.md
benchmarks/: cpu_usage_analysis.md  inference_speed_comparison.txt  latency_measurements.csv  memory_footprint.md
bindings/: avtdsp.cpp  build.sh
data/: README.md
data/splits/: test.txt  train.txt  val.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DSP_FUNDAMENTALS.md  PLUGIN_BUILD.md  REAL_TIME_OPTIMIZATION.md  TRAINING_GUIDE.md
models/: README.md
models/pytorch/: logfreq_fb.npy
models/quantization/: accuracy_loss_analysis.csv  quantization_report.md
plugin/: CMakeLists.txt  README.md
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/DSP/: CircularAudioBuffer.h  FeatureExtractor.cpp  FeatureExtractor.h  FormantAnalyzer.cpp  FormantAnalyzer.h  LogFreqFeature.h  OverlapAddBuffer.cpp  OverlapAddBuffer.h  PitchShifter.h  Resampler.h  SampleFifo.h  SimpleFFT.h  SpectrogramProcessor.cpp  SpectrogramProcessor.h  YINPitchDetector.cpp  YINPitchDetector.h
plugin/Source/ML/: ChordDetector.cpp  ChordDetector.h  DecoderNetwork.cpp  DecoderNetwork.h  EncoderNetwork.cpp  EncoderNetwork.h  ModelManager.cpp  ModelManager.h  NNMath.h  NNModel.cpp  NNModel.h  NeuralAudioProcessor.cpp  NeuralAudioProcessor.h  VocoderNetwork.cpp  VocoderNetwork.h
plugin/Source/Parameters/: ParameterSmoothing.h  StyleInterpolation.h  VoiceTransformParameters.h
plugin/Source/UI/: LookAndFeel.cpp  LookAndFeel.h  PresetManager.cpp  PresetManager.h  SpectrogramDisplay.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StyleKnob.cpp  StyleKnob.h
plugin/Source/Utilities/: AudioBufferUtils.h  Logger.cpp  Logger.h  Performance.cpp  Performance.h
plugin/Tests/: CMakeLists.txt  test_dsp.cpp  test_framework.h  test_logfreq.cpp  test_main.cpp  test_nn.cpp  test_pitch.cpp
scripts/: build_plugin.sh  download_datasets.sh  export_models.sh  preprocess_data.sh  train.sh
training/: chord_synth.py  config.yaml  data_loader.py  evaluate.py  export_chord.py  export_rtneural.py  export_vc.py  harmonizer_demo.py  inference.py  model.py  preprocess.py  preprocess_vc.py  requirements.txt  test_resynthesis.py  train.py  train_chord.py  train_vc.py  verify_rtneural_export.py
training/notebooks/: README.md
